add chi tiet bai dang page and bai dang cua toi page

--- a/src/main/resources/templates/web/baidangcanhan.html
+++ b/src/main/resources/templates/web/baidangcanhan.html
@@ -97,8 +97,9 @@
                     </div>
                     <hr style="width: 100%;opacity: 0.8;;float: right;">
                 </div>
+                <input type="hidden" id="tkid" th:value="${tkid}">
                 <div class="baidang-container" style="height: auto;">
-                    <script src="/js/web/baidang/hienthibaidang.js"></script>
+                    <script src="/js/web/baidang/baidangcuatoi.js"></script>
                 </div>
             </div>
         </div>
