--- a/src/main/resources/templates/web/chi-tiet-bai-dang.html
+++ b/src/main/resources/templates/web/chi-tiet-bai-dang.html
@@ -24,208 +24,7 @@
         <!-- content -->
         <section class="header-study-group bg-gradient-blue">
             <div style="width: 1164px;" class="container">
-                <div  class="row">
-                    <h1>
-               
-                    <i class="fa fa-check-circle" aria-hidden="true" style="font-size: 24px;color: #03ad03;margin-right: 2px;" title="Đã xác thực thông tin"></i>
-                                Lớp học gia sư môn toán lớp 12		
-                        
-                    </h1>		
-                    <div style="display: flex;">
-                        <p class="name inline" style="padding-right: 20px;">
-                            <i class="fa fa-user-o"></i> <a href="/blacasa-cskh-02">Dasuo CSKH</a>
-                        </p>
-                        <p class="create inline" style="padding-right: 20px;float: left;">
-                            <i class="fa fa-calendar"></i> 04.05.2021 - 14:33			
-                        </p>
-                        <p class="name inline">
-                            Mã số lớp: <strong>7672</strong>
-                        </p>
-                    </div>		
-                    
-                </div>   
-                    <!--Kiểu lớp: Tìm GIA SƯ-->
-                            <div class="row" style="padding:15px 0;border-top:1px solid #e7e7e7;height: 201px;">
-                        <div class="col-md-4 col-sm-4">
-                            <p class="no-padding">
-                                <i class="fa fa-bookmark"></i> Trạng thái: <span style="font-weight: bold; color: #ff961e; text-transform: uppercase;">
-                                    Đang tìm giáo viên</span>
-                            </p>
-                            <p class="no-padding"><i class="fa fa-book"></i>  Môn học:&nbsp;Toán 12
-                            </p>
-                            <p><i class="fa fa-briefcase"></i> Hình thức học: Online (Gia sư)  
-                            </p>  		      
-                           
-                        </div>
-                            
-                        <div class="col-md-4 col-sm-4">
-                            <p><i class="fa fa-venus-mars"></i> Tìm gia sư: 
-                            Nam, Nữ				
-                            </p>
-                            <p><i class="fa fa-user-o"></i>
-                                Số học viên : 1					
-                            </p>
-                            <p><i class="fa fa-book"></i>
-                             Thời lượng: Tuần 2 buổi (2h/buổi)
-                            </p>
-                            <p>
-                            <i class="fa fa-money"></i> Học phí 1 buổi: <span class="class-tutor-fee">170,000 vnđ</span> 
-                            </p>
-                        </div>
-                            
-                        <div class="col-md-4 col-sm-4">
-                            <div class="header-study-group-right">
-                                <p>Phí nhận lớp:<span class="connection-fee"> 240,000 vnđ</span></p>
-        
-                                    (<strong style="color: #FF961E">Chuyển khoản </strong> )
-                                                                                                                    
-                      
-                                <p style="margin-top: 10px;">Chưa có đề nghị dạy nào!</p>
-                                                
-                                    <div class="class-actions">
-                                                                    
-                                    <a href="#" class="btn-blue btn ctools-use-modal ctools-use-modal-processed">Đề Nghị Dạy</a>              														</div>
-                                </div>
-                            </div>			
-                    </div>
-                    <div class="gblock-v2 detail-content">
-                        <div class="text">
-                            <h3 style="padding: 12px 0;"><i class="fa fa-quote-right" aria-hidden="true"></i> Chi tiết nội dung cần học</h3>
-                                                             
-						Học viên nam, lực học Văn chưa thực sự vững, thi thử được tầm 6 điểm nhưng không tập trung, hay bị xao nhãng phải có gia sư lên được dàn ý chi tiết thì mới làm bài được, yêu cầu; NGHIÊM KHẮC nhưng mềm mỏng phù hợp để con tập trung học và đạt hiệu quả. QUAN TRỌNG LÀ RÈN KĨ NĂNG LÀM ĐỀ.  Mục tiêu thi 7-8 điểm. Tính cách học viên thích được nịnh, thích kiểu tâm sự như 2 bạn  và gần gũi. Học tầm 6h- 8h tối
-                        <br>
-                        
-                        </div>
-                    </div>
-                    <div class="info-step2">
-                        <p  class="p-create-class-title"><i class="fa fa-calendar" aria-hidden="true"></i> Thời gian có thể học</p>
-                        <div style="text-align: center; height: 200PX; margin-left: 193px;" class="schedule-detail">
-                            <div class="row-calendar-check">
-                                <h3>Thứ 2</h3>
-                                <ul>
-                                    <li class="buoihoc">
-                                        <label for="morning-calendar-2">Sáng</label>
-                                        <input class="radio-calendar" id="morning-calendar-2" type="checkbox" name="sang_2" value="sang_2">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="afternoon-calendar-2">Chiều</label>
-                                        <input class="radio-calendar" id="afternoon-calendar-2" type="checkbox" name="chieu_2" value="chieu_2">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="evening-calendar-2">Tối</label>
-                                        <input class="radio-calendar" id="evening-calendar-2" type="checkbox" name="toi_2" value="toi_2">
-                                    </li>
-                                </ul>
-                            </div>
-                            <div  class="row-calendar-check">
-                                <h3>Thứ 3</h3>
-                                <ul>
-                                    <li class="buoihoc">
-                                        <label for="morning-calendar-2">Sáng</label>
-                                        <input class="radio-calendar" id="morning-calendar-3" type="checkbox" name="sang_3" value="sang_3">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="afternoon-calendar-3">Chiều</label>
-                                        <input class="radio-calendar" id="afternoon-calendar-3" type="checkbox" name="chieu_3" value="chieu_3">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="evening-calendar-3">Tối</label>
-                                        <input class="radio-calendar" id="evening-calendar-3" type="checkbox" name="toi_3" value="toi_3">
-                                    </li>
-                                </ul>
-                            </div>
-                            <div  class="row-calendar-check">
-                                <h3>Thứ 4</h3>
-                                <ul>
-                                    <li class="buoihoc">
-                                        <label for="morning-calendar-4">Sáng</label>
-                                        <input class="radio-calendar" id="morning-calendar-4" type="checkbox" name="sang_4" value="sang_4">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="afternoon-calendar-4">Chiều</label>
-                                        <input class="radio-calendar" id="afternoon-calendar-4" type="checkbox" name="chieu_4" value="chieu_4">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="evening-calendar-4">Tối</label>
-                                        <input class="radio-calendar" id="evening-calendar-4" type="checkbox" name="toi_4" value="toi_4">
-                                    </li>
-                                </ul>
-                            </div>
-                            <div  class="row-calendar-check">
-                                <h3>Thứ 5</h3>
-                                <ul>
-                                    <li class="buoihoc">
-                                        <label for="morning-calendar-5">Sáng</label>
-                                        <input class="radio-calendar" id="morning-calendar-5" type="checkbox" name="sang_5" value="sang_5">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="afternoon-calendar-5">Chiều</label>
-                                        <input class="radio-calendar" id="afternoon-calendar-2" type="checkbox" name="chieu_5" value="chieu_5">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="evening-calendar-5">Tối</label>
-                                        <input class="radio-calendar" id="evening-calendar-5" type="checkbox" name="toi_5" value="toi_5">
-                                    </li>
-                                </ul>
-                            </div>
-                            <div  class="row-calendar-check">
-                                <h3>Thứ 6</h3>
-                                <ul>
-                                    <li class="buoihoc">
-                                        <label for="morning-calendar-6">Sáng</label>
-                                        <input class="radio-calendar" id="morning-calendar-6" type="checkbox" name="sang_6" value="sang_6">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="afternoon-calendar-6">Chiều</label>
-                                        <input class="radio-calendar" id="afternoon-calendar-6" type="checkbox" name="chieu_6" value="chieu_6">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="evening-calendar-6">Tối</label>
-                                        <input class="radio-calendar" id="evening-calendar-6" type="checkbox" name="toi_6" value="toi_6">
-                                    </li>
-                                </ul>
-                            </div>
-                            <div  class="row-calendar-check">
-                                <h3>Thứ 7</h3>
-                                <ul>
-                                    <li class="buoihoc">
-                                        <label for="morning-calendar-7">Sáng</label>
-                                        <input class="radio-calendar" id="morning-calendar-7" type="checkbox" name="sang_7" value="sang_7">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="afternoon-calendar-2">Chiều</label>
-                                        <input class="radio-calendar" id="afternoon-calendar-7" type="checkbox" name="chieu_7" value="chieu_7">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="evening-calendar-2">Tối</label>
-                                        <input class="radio-calendar" id="evening-calendar-7" type="checkbox" name="toi_7" value="toi_7">
-                                    </li>
-                                </ul>
-                            </div>
-                            <div  class="row-calendar-check">
-                                <h3>Chủ nhật</h3>
-                                <ul>
-                                    <li class="buoihoc">
-                                        <label for="morning-calendar-8">Sáng</label>
-                                        <input class="radio-calendar" id="morning-calendar-8" type="checkbox" name="sang_8" value="sang_8">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="afternoon-calendar-8">Chiều</label>
-                                        <input class="radio-calendar" id="afternoon-calendar-8" type="checkbox" name="chieu_8" value="chieu_8">
-                                    </li>
-                                    <li class="buoihoc">
-                                        <label for="evening-calendar-8">Tối</label>
-                                        <input class="radio-calendar" id="evening-calendar-8" type="checkbox" name="toi_8" value="toi_8">
-                                    </li>
-                                </ul>
-                            </div>
-                            
-                        </div>
-                        <p class="note-calender"><span style="color: #007e00">Màu xanh</span> là những buổi có thể học.</p>
-                        
-                    </div>
-                    
-                </div>
+                <script src="/js/web/baidang/chitietbaidang.js"></script>
             </div>
         </section>
         <!-- content -->
