--- a/src/main/resources/templates/web/taobaidang.html
+++ b/src/main/resources/templates/web/taobaidang.html
@@ -41,7 +41,7 @@
                             <div class="col-md-12">
                                 <div class="class-field-1 class-field">
                                     <input type="hidden" name="nid" value="">
-                                    <p style="text-align: justify;line-height:1.8;font-size:15px;">
+                                    <p style="text-align: justify;line-height:1.8;font-size:15px;margin-left: 15px; width: 95%;">
                                         Xin chào, bạn chỉ cần <strong>đăng yêu cầu học</strong>, các gia sư sẽ
                                         <strong>gửi đề nghị dạy</strong>
                                         tới bạn với mức học phí phù hợp để bạn lựa chọn. Nếu bạn cần tư vấn, xin vui
