--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -650,7 +650,7 @@ body{
     position: absolute;
     background-color: #fff;
     height: auto;
-    left: 309px;
+    left: 295px;
     padding: 8px 0;
     width: 300px;
     border-bottom:1px solid rgba(0, 0, 0, 0.3);
@@ -658,9 +658,9 @@ body{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     border-radius: 4px ;
     z-index: 10;
-   display: none;
+    display: none;
 }
-.left-content ul li:hover .sub-menu  {
+.left-content ul li:hover .sub-menu {
     display: block;
 }
 
@@ -985,7 +985,7 @@ body{
     color: #069d86;
     font-size: 20px;
 }
-#name_class{
+#tomtatyc{
     width: 100%;
     height: 35px;
     border: .5px solid #ccc;
@@ -996,7 +996,7 @@ body{
     width: 50%;
     padding: 0 10px;
 }
-#subject-class{
+#monhoclinh{
     margin-top: 16px;
     padding: 10px 0;
     padding-right: 220px;
