add buoi service

--- a/src/main/resources/templates/web/up-giao-trinh.html
+++ b/src/main/resources/templates/web/up-giao-trinh.html
@@ -132,7 +132,7 @@
 					<h3>[[${message}]]</h3>
 				</div>
              <div class="body-block body-blocks">
-                <form th:action="@{/danggiaotrinh?id=1}" id="update-profile-form" action="" method="POST" modelattribute="giaotrinh" enctype="multipart/form-data">
+                <form th:action="@{/danggiaotrinh?idlop=10}" id="update-profile-form" action="" method="POST" modelattribute="giaotrinh" enctype="multipart/form-data">
                     <div  class="info-step-1">
                     
                             <div style="width: 100%;" class="col-md-1">
