--- a/src/main/resources/templates/web/upbaikt.html
+++ b/src/main/resources/templates/web/upbaikt.html
@@ -49,7 +49,7 @@
 
 							<div style="width: 100%;" class="col-md-1">
 								<label for="hannap">HẠN NẠP</label> <span class="teacher-alert">*</span><br>
-								<input type="datetime-local" id="hannap" name="hannap">
+								<input type="datetime-local" id="hannap" name="date">
 
 							</div>
 
