--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -28,7 +28,7 @@
             <div style="height: 500px; margin-bottom: 30px;" class="right-content">
                 <div class="head-block">
                     <h4 style="padding: 10px 8px;width: 182px;color: #fff;background-color: #069d86;font-weight: bold;">
-                        XIN CHAO</h4>
+                        XIN CHÀO</h4>
                     <hr style="width: 80.2%;opacity: 0.8;float: right;" color="#069d86">
                 </div>
 
@@ -38,7 +38,7 @@
                      
                         </p>
 
-                        <p>Chúng tôi biết bạn có nhiều sự lựa chọn. Cảm ơn bạn đã tin tưởng sản phẩm của chúng tôi !</p>
+                        <p>Chúng tôi biết bạn có nhiều sự lựa chọn. Cảm ơn bạn đã tin tưởng sản phẩm của chúng tôi!</p>
                     </div>
                     <div style="width: 90%;background-color: #FFF;height: 300px;margin-left: 44px;margin-top: 30px;text-align: center;"
                         class="suluachon">
