--- a/src/main/resources/templates/admin/qlbaidang.html
+++ b/src/main/resources/templates/admin/qlbaidang.html
@@ -15,6 +15,26 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
 	crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+	crossorigin="anonymous"></script>
+<script src="/js/scripts.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/chart-area-demo.js"></script>
+<script src="/assets/demo/chart-bar-demo.js"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
+	crossorigin="anonymous"></script>
+<script src="/assets/demo/datatables-demo.js"></script>
+
 </head>
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -139,24 +159,17 @@
 										<th class="sorting" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1"
 											aria-label="Salary: activate to sort column ascending"
-											style="width: 58px;">ID tài khoản</th>
+											style="width: 58px;">Thời gian bắt đầu</th>
 										<th class="sorting" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1"
 											aria-label="Salary: activate to sort column ascending"
 											style="width: 58px;">Chức năng</th>
 									</tr>
 								</thead>
-								
-								<tbody>
-									<tr role="row" class="odd">
-										<td class="sorting_1">Airi Satou</td>
-										<td>Accountant</td>
-										<td>Tokyo</td>
-										<td>33</td>
-										<td>2008/11/28</td>
-										<td>$162,700</td>
-										<td>$162,700</td>
-									</tr>
+
+								<tbody id="noidung">
+
+
 								</tbody>
 							</table>
 						</div>
@@ -166,24 +179,95 @@
 			</main>
 
 		</div>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/js/scripts.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/chart-area-demo.js"></script>
-	<script src="/assets/demo/chart-bar-demo.js"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
-		crossorigin="anonymous"></script>
-	<script src="/assets/demo/datatables-demo.js"></script>
+		<div class="modal fade" id="updateAirplaneModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<!-- Modal Header -->
+					<div class="modal-header">
+						<h4 class="modal-title" style="text-align: center">Thông tin
+							chi tiết bài đăng</h4>
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+
+					<!-- Modal body -->
+					<div class="modal-header"></div>
+
+					<!-- Modal body -->
+					<div class="modal-body" id="booking-detail-body">
+						<!--  booking info -->
+
+
+						<!-- Tickets -->
+						<h3>Thông tin người đăng</h3>
+						<table class="table">
+							<center>
+							<tr>
+								<td>ID</td>
+								<td>1</td>
+
+							</tr>
+							<tr>
+								<td>Họ và tên:</td>
+								<td>Phan Văn Lương</td>
+							</tr>
+							</center>
+						</table>
+
+						<div class="row">
+
+							<div class="col-sm-12">
+								<h5>
+									<b>Thông tin bài viết</b>
+								</h5>
+								<table class="table">
+									<tr>
+										<td><b>ID</b></td>
+										<td>1</td>
+									</tr>
+									<tr>
+										<td><b>Yêu cầu:</b></td>
+										<td
+											style=" word-wrap: break-word;">Yêu
+											cầufenfffffddddddddddddddddddddfffffffffffff:</td>
+
+									</tr>
+									<tr>
+										<td><b>Học phí:</b></td>
+										<td>123456789</td>
+									</tr>
+									<tr>
+										<td><b>Mô tả:</b></td>
+										<td>abc@gmail.com</td>
+									</tr>
+									<tr>
+										<td><b>Ngày bắt đầu:</b></td>
+										<td>ONLINE</td>
+									</tr>
+									<tr>
+										<td><b>Số điện thoại:</b></td>
+										<td>2</td>
+									</tr>
+									<tr>
+										<td><b>Số buổi:</b></td>
+										<td>50000</td>
+									</tr>
+									<tr>
+										<td><b>Môn học:</b></td>
+										<td>50000</td>
+									</tr>
+									<tr>
+										<td><b>Chủ đề:</b></td>
+										<td>50000</td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<script src="/js/web/baidang/baidangadmin.js"></script>
+				<script src="/js/web/baidang/xoabaidangadmin.js"></script>
+				<script src="/js/web/baidang/showbaidangadmin.js"></script>
 </body>
+
 </html>
