Update hienthilichlop page

--- a/src/main/resources/templates/web/hienthilichlop.html
+++ b/src/main/resources/templates/web/hienthilichlop.html
@@ -38,42 +38,13 @@
                         <p style="margin-left: 50px; color: black; padding-bottom: 8px;"> Tiến bộ mỗi ngày cùng Dasuo
                             lớp học online. </p>
                     </a>
-                    <hr style="margin-top: -15px; color: #069d86;">
+                    
                 </div>
-
-                <div class="online-classes">
-                    <div class="online-class">
-                        <div class="menu-tren">
-                            <a class="cuochop" href="#">Lớp học sắp diễn ra</a>
-                            <a class="cuochop" href="#">Lớp học trước đó</a>
-                        </div>
-
-                    </div>
-
+                <hr>
+                <div style="background-color: #fff;    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);" class="lich-lop-cua-toi">
+                    <script src="/js/web/lop/loptheonguoihoc.js"></script>
                 </div>
-                <hr style=" color: #069d86;margin-top: 9px;width:72.5%;float: right;">
-
-                <div style="margin-bottom: 16px; margin-top: 50px; margin-left: 36px; height: auto;" class="row-tittle">
-                    <div class="row">
-                        <div style="float: left;" class="col-md-2 col-sm-2">
-                            <div class="row-request-1">
-                                <h3>Thời gian bắt đầu</h3>
-                            </div>
-                        </div>
-                        <div style="float: left ;margin-left: 30px; width: 30%;" class="col-md-6 col-sm-6">
-                            <div class="row-request-2">
-                                <h3>Đề tài</h3>
-                            </div>
-                        </div>
-                        <div style="float: left;" class="col-md-2 col-sm-2">
-                            <div class="row-request-3">
-                                <h3>ID cuộc họp</h3>
-                            </div>
-                        </div>
-
-                    </div>
-                    <hr style="width: 100%;opacity: 0.8;;float: right;">
-                </div>
+                <input type="hidden" th:value="${tkid}" id="tkid">
             </div>
         </div>
 
