Update hienthibaidang, chitietlophoc, taobaidang

--- a/src/main/resources/templates/web/hienthilichlop.html
+++ b/src/main/resources/templates/web/hienthilichlop.html
@@ -21,7 +21,7 @@
         </div>
         <div style="width: 100%;margin-top: 54px; padding: 0px 40px;" class="container">
             <div style="width:20% ;" class="left-content">
-                <script src="/js/web/components/leftmenulop.js"></script>
+                <script src="/js/web/components/leftmenu.js"></script>
             </div>
 
             <!-- right-content -->
@@ -46,8 +46,14 @@
                 </div>
                 <input type="hidden" th:value="${tkid}" id="tkid">
             </div>
-        </div>
 
+            <div style="margin-top: 10px;margin-bottom: 30px; text-align: center;" class="Pagination">
+                <div class="pagination">
+                    
+                </div>
+            </div>
+        </div>
+        
         <hr style="margin-top: 30px;color: #069d86; width: 100%;">
         <div class="last-content">
             <script src="/js/web/components/httv.js"></script>
@@ -55,6 +61,7 @@
         <div id="footer">
             <script src="/js/web/components/footer_web.js"></script>
         </div>
+    </div>
 </body>
 
 </html>
