--- a/src/main/resources/templates/web/taobaidang.html
+++ b/src/main/resources/templates/web/taobaidang.html
@@ -181,7 +181,7 @@
                                     <div class="col-md-6">
                                         <div class="class-field-9 class-field">
                                             <p class="p-create-class-title">Ngày dự kiến học</p>
-                                            <input style="padding: 8px 5px; padding-right: 220px;" type="text"
+                                            <input style="padding: 8px 5px; padding-right: 220px;" type="date"
                                                 name="day-start" id="day-start" value="" class="hasDatepicker">
                                         </div>
                                     </div>
