--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -44,13 +44,13 @@
                         class="suluachon">
                         <h2>Các tiện ích</h2>
                         <div class="luachon">
-                            <a class="option" href="#"> Xem Thông tin cá nhân </a>
+                            <a class="option" href="/taikhoan/trangcanhan"> Xem Thông tin cá nhân </a>
                         </div>
                         <div class="luachon">
-                            <a class="option1" href="#">Lớp học</a>
+                            <a class="option1" href="/hienthilichlop">Lớp học</a>
                         </div>
                         <div class="luachon">
-                            <a class="option1" href="#">Gia sư</a>
+                            <a class="option1" href="/giasuonline">Gia sư</a>
                         </div>
                         <div class="luachon">
                             <a class="option1" href="#">Nạp tiền</a>
