--- a/src/main/resources/templates/web/up-giao-trinh.html
+++ b/src/main/resources/templates/web/up-giao-trinh.html
@@ -25,44 +25,7 @@
         <div style="width: 100%;margin-top: 54px; padding: 0px 40px;" class="container">
         <!-- left-content -->
         <div class="left-content hide-on-mobile-tablet">
-            <ul id="accordion">
-                <li>
-                    <a href="#"><i class="fas fa-graduation-cap tk-icon icon-menu"></i>  Quản lý yêu cầu <i class="fas fa-chevron-right show-right"></i></a>
-                    <ul class="sub-menu">
-                        <li><a href="#">Tất cả lớp đã đăng</a></li>
-                        <li><a href="#">Đăng yêu cầu tìm gia sư mới</a></li>
-                    </ul>
-                </li>
-                <li><a style="color: orange;" href="#"><i class="fas fa-comments icon-menu"></i> Hội thoại và tin nhắn</a></li>
-                <li><a href="#"><i class="fas fa-bell icon-menu"></i> Thông báo <i class="fas fa-chevron-right show-right"></i></a>
-                    <ul class="sub-menu">
-                        <li><a href="#">Tất cả thông báo</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-pen-square icon-menu"></i> Bài viết <i class="fas fa-chevron-right show-right"></i></a>
-                    <ul class="sub-menu">
-                        <li><a href="#">Đã đăng</a></li>
-                        <li><a href="#">Đang soạn</a></li>
-                        <li><a href="#">Đã gửi</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"> <i class="fas fa-heart icon-menu"></i>Đã lưu <i class="fas fa-chevron-right show-right"></i></a>
-                    <ul class="sub-menu">
-                        <li><a href="#">Yêu cầu tìm giáo viên</a></li>
-                        <li><a href="#">Giáo viên</a></li>
-                    </ul>
-                </li>
-                <li><a href="#"> <i class="fas fa-dollar-sign icon-menu"></i> Lịch sử giao dịch</a></li>
-                <li>
-                    <a href="#"><i class="fas fa-flag icon-menu"></i> Thông tin cá nhân <i class="fas fa-chevron-right show-right"></i></i></a>
-                    <ul class="sub-menu">
-                        <li><a href="#">Sửa thông tin cá nhân</a></li>
-                        <li><a href="#">Thay đổi email, mật khẩu</a></li>
-                    </ul>
-                </li>
-            </ul>
+            <script src="/js/web/components/leftmenulop.js"></script>
          </div>
         <!-- left-content -->
         
